[package]
name = "test_no_std"
version = "0.1.0"
authors = ["Alain Brenzikofer <alain.brenzikofer@scs.ch>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd      = { rev = "v1.1.0", git = "https://github.com/baidu/rust-sgx-sdk", features = ["untrusted_fs","net","backtrace"] }

[dependencies]
libc = { version="0.2", default-features=false }

[dependencies.geo]
git = "https://github.com/encointer/geo"
branch = "no_std"
default-features = false


[patch."https://github.com/encointer/geo"]
geo = { path = "../geo-fork" }